--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="header-text">
-                        <h2>hi &#129392<span>,</span> i am <br> Snethemba<br> Shangase <span>.</span> </h2>
+                        <h2>hi &#12939;<span>,</span> i am <br> Snethemba<br> Shangase <span>.</span> </h2>
                         <p>Business Analyst/Web Developer</p>
 
                     </div>
